noinst_PROGRAMS = \
	testpandaentry \
	testnumberentry	\
	testpandatext \
	testpandacombo \
	testpandaclist \
	testpandapixmap \
	testpandapdf \
	testpandahtml \
	testpandatimer \
	testpandatable

BASE_CFLAGS = \
	-I $(top_builddir)/gtkpanda \
	$(GTK_PANDA_CFLAGS)

BASE_LIBS = \
	$(top_builddir)/gtkpanda/libgtkpanda-2.0.la \
	$(GTK_PANDA_LIBS)

BASE_DEPS = \
	$(top_builddir)/gtkpanda/libgtkpanda-2.0.la

testpandaentry_SOURCES = testpandaentry.c
testpandaentry_CFLAGS = $(BASE_CFLAGS)
testpandaentry_LDADD = $(BASE_LIBS)
testpandaentry_DEPENDENCIES = $(BASE_DEPS)

testnumberentry_SOURCES = testnumberentry.c
testnumberentry_CFLAGS = $(BASE_CFLAGS)
testnumberentry_LDADD = $(BASE_LIBS)
testnumberentry_DEPENDENCIES = $(BASE_DEPS)

testpandatext_SOURCES = testpandatext.c
testpandatext_CFLAGS = $(BASE_CFLAGS)
testpandatext_LDADD = $(BASE_LIBS)
testpandatext_DEPENDENCIES = $(BASE_DEPS)

testpandacombo_SOURCES = testpandacombo.c
testpandacombo_CFLAGS = $(BASE_CFLAGS)
testpandacombo_LDADD = $(BASE_LIBS)
testpandacombo_DEPENDENCIES = $(BASE_DEPS)

testpandaclist_SOURCES = testpandaclist.c
testpandaclist_CFLAGS = $(BASE_CFLAGS)
testpandaclist_LDADD = $(BASE_LIBS)
testpandaclist_DEPENDENCIES = $(BASE_DEPS)

testpandapixmap_SOURCES = testpandapixmap.c
testpandapixmap_CFLAGS = $(BASE_CFLAGS)
testpandapixmap_LDADD = $(BASE_LIBS)
testpandapixmap_DEPENDENCIES = $(BASE_DEPS)

testpandapdf_SOURCES = testpandapdf.c
testpandapdf_CFLAGS = $(BASE_CFLAGS)
testpandapdf_LDADD = $(BASE_LIBS)
testpandapdf_DEPENDENCIES = $(BASE_DEPS)

testpandahtml_SOURCES = testpandahtml.c
testpandahtml_CFLAGS = $(BASE_CFLAGS)
testpandahtml_LDADD = $(BASE_LIBS)
testpandahtml_DEPENDENCIES = $(BASE_DEPS)

testpandatimer_SOURCES = testpandatimer.c
testpandatimer_CFLAGS = $(BASE_CFLAGS)
testpandatimer_LDADD = $(BASE_LIBS)
testpandatimer_DEPENDENCIES = $(BASE_DEPS)

testpandatable_SOURCES = testpandatable.c
testpandatable_CFLAGS = $(BASE_CFLAGS)
testpandatable_LDADD = $(BASE_LIBS)
testpandatable_DEPENDENCIES = $(BASE_DEPS)
